[gd_scene load_steps=9 format=2]

[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tilesets/x_out_red.png" type="Texture" id=2]
[ext_resource path="res://models/computer/computer_screen.gd" type="Script" id=3]
[ext_resource path="res://tilesets/screen_rect_2.png" type="Texture" id=4]
[ext_resource path="res://tilesets/screen_rect_1.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "expand"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Screen:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[node name="ComputerScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Screen" type="NinePatchRect" parent="."]
self_modulate = Color( 0.298039, 0.298039, 0.298039, 1 )
margin_left = 280.0
margin_top = 144.0
margin_right = 730.0
margin_bottom = 444.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ad" type="NinePatchRect" parent="Screen"]
self_modulate = Color( 0.635294, 0.631373, 0.631373, 1 )
margin_left = 92.0
margin_top = 64.0
margin_right = 352.0
margin_bottom = 264.0
texture = ExtResource( 5 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Screen/Ad"]
margin_left = -2.16632
margin_top = 33.0079
margin_right = 262.834
margin_bottom = 80.0079
custom_fonts/font = SubResource( 2 )
text = "Gently used laundromat for sale:  $75,000"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Screen/Ad"]
margin_left = 55.8337
margin_top = 120.008
margin_right = 205.834
margin_bottom = 170.008
custom_fonts/font = SubResource( 2 )
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBar" type="NinePatchRect" parent="Screen"]
self_modulate = Color( 0.360784, 0.360784, 0.360784, 1 )
margin_left = 12.0
margin_top = 10.0
margin_right = 399.0
margin_bottom = 35.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Screen/SearchBar"]
margin_left = 6.0
margin_top = 7.0
margin_right = 46.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "http://totally-legit-business-schemes.laundry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="Screen"]
modulate = Color( 0.933333, 0.862745, 0.654902, 1 )
margin_left = 408.41
margin_top = 5.94421
margin_right = 440.41
margin_bottom = 37.9442
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/expand = SubResource( 3 )

[connection signal="pressed" from="Screen/Ad/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Screen/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="Screen/ExitButton" to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="Screen/ExitButton" to="." method="_on_ExitButton_pressed"]
